copy: rename from 'FinanceNow' to 'GoodBank'

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Finance Now by Argyle",
-  "short_name": "Finance Now",
+  "name": "GoodBank by Argyle",
+  "short_name": "GoodBank",
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "display": "fullscreen",
